--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "oss@fastly.com",
   "license": "MIT",
   "engines": {
-    "node": "^16"
+    "node": ">=16.0.0"
   },
   "devDependencies": {
     "core-js": "^3.19.1",
