--- a/fastly.toml
+++ b/fastly.toml
@@ -1,5 +1,11 @@
+# This file describes a Fastly Compute@Edge package. To learn more visit:
+# https://developer.fastly.com/reference/fastly-toml/
+
 authors = ["<oss@fastly.com>"]
 description = "An empty application template for the Fastly Compute@Edge environment which simply returns a 200 OK response."
 language = "javascript"
 manifest_version = 2
 name = "Empty starter for JavaScript"
+
+[scripts]
+  build = "npm exec js-compute-runtime ./src/index.js ./bin/main.wasm"
