--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "compute-starter-kit-javascript-empty",
   "version": "0.4.0",
-  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fastly/compute-starter-kit-javascript-empty.git"
@@ -17,6 +16,10 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@fastly/js-compute": "^1.3.2"
+    "@fastly/js-compute": "^1.5.1"
+  },
+  "scripts": {
+    "build": "js-compute-runtime ./src/index.js ./bin/main.wasm",
+    "deploy": "fastly compute publish"
   }
 }
