--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fastly/js-compute": "^2.0.0"
   },
   "scripts": {
+    "serve": "fastly compute serve",
     "build": "js-compute-runtime ./src/index.js ./bin/main.wasm",
     "deploy": "fastly compute publish"
   }
