--- a/fastly.toml
+++ b/fastly.toml
@@ -1,8 +1,8 @@
-# This file describes a Fastly Compute@Edge package. To learn more visit:
+# This file describes a Fastly Compute package. To learn more visit:
 # https://developer.fastly.com/reference/fastly-toml/
 
 authors = ["<oss@fastly.com>"]
-description = "An empty application template for the Fastly Compute@Edge environment which simply returns a 200 OK response."
+description = "An empty application template for the Fastly Compute environment which returns a 200 OK response."
 language = "javascript"
 manifest_version = 3
 name = "Empty starter for JavaScript"
