--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "dependencies": {
     "@fastly/js-compute": "^3.0.0"
   },
+  "devDependencies": {
+    "@fastly/cli": "^10.14.0"
+  },
   "scripts": {
     "build": "js-compute-runtime ./src/index.js ./bin/main.wasm",
+    "start": "fastly compute serve",
     "deploy": "fastly compute publish"
   }
 }
